--- a/ThrustAssistMod/ThrustAssistMod.csproj
+++ b/ThrustAssistMod/ThrustAssistMod.csproj
@@ -69,6 +69,7 @@
     <Compile Include="UI.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Updater.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
