--- a/ThrustAssistMod/ThrustAssistMod.csproj
+++ b/ThrustAssistMod/ThrustAssistMod.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Updater.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
