--- a/ThrustAssistMod/ThrustAssistMod.csproj
+++ b/ThrustAssistMod/ThrustAssistMod.csproj
@@ -65,6 +65,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Patches.cs" />
     <Compile Include="SettingsManager.cs" />
     <Compile Include="UI.cs" />
     <Compile Include="Main.cs" />
